# INRIA_DeCasteljauAlgorithm

./: .gitignore  CMakeLists.txt  main.cpp
include/: Pyramide.h  tests.hpp
src/: Pyramide.cpp  tests.cpp
